--- a/kontak.html
+++ b/kontak.html
@@ -96,7 +96,7 @@
             </div>
             <div class="card col-md-4 pt-3" style="border: none;">
                 <div class="card-body text-center">
-                    <p><a href="https://www.facebook.com/percetakanalfathoffset/" style="text-decoration: none; color: black;">
+                    <p><a href="https://www.facebook.com/percetakanalfathoffset/" style="text-decoration: none; color: black;" target="_blank">
                         <img src="assets/img/fb.png" width="auto" height="50px" class="pe-3">
                         Ikut kami di Facebook</a>
                     </p>
