--- a/order.html
+++ b/order.html
@@ -40,7 +40,7 @@
 
     <!-- FORM ORDER -->
     <div class="container-sm d-flex justify-content-center pt-5 pb-5">
-        <div class="col-lg-8 col-md-10 form-container">
+        <div class="col-md-10 form-container">
             <h5 class="mt-3 text-center">Form Order Percetakan Alfath Offset</h5>
             <form class="needs-validation" novalidate id="orderForm">
                 <h4>Order Disini</h4>
